plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.22.0'
    id 'org.openapi.generator' version '7.6.0'

}

group = 'cloudflight.integra'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Web
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Security
    implementation "org.springframework.boot:spring-boot-starter-security"

    // Jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

    // Springdoc OpenAPI (UI + starter)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // DB dependency
    implementation 'org.postgresql:postgresql:42.7.7'

    // Test dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'

    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    implementation 'org.slf4j:slf4j-api'
    implementation 'org.mapstruct:mapstruct:1.6.2'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'

    testImplementation 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        palantirJavaFormat()
    }
}

openApiGenerate {
    generatorName.set("typescript-axios")
    inputSpec.set("$rootDir/backend/src/main/resources/api-docs.yaml")
    outputDir.set("$rootDir/backend/src/main/gen")
    apiPackage.set("api")
    modelPackage.set("models")

    configOptions.set([
            npmName: "my-ts-client",
            supportsES6: "true",
            withSeparateModelsAndApi: "true",
            modelPackage: "models",
            apiPackage: "api",
            generateAliasAsModel: "true",
            enumPropertyNaming: "UPPERCASE",
            useSingleRequestParameter: "true",
            apiSuffix: "Api",
            modelSuffix: "",
            modelNameSuffix: "",
    ])

}



tasks.named("build") {
    dependsOn("openApiGenerate")
}

